...
                                <subviews>
                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z4e-Zg-oMg">
                                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                        <subviews>
                                            <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XKY-Yf-eRj">
                                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Selected Image">
                                                    <bool key="isElement" value="YES"/>
                                                </accessibility>
                                                <constraints>
                                                    <constraint firstAttribute="width" secondItem="XKY-Yf-eRj" secondAttribute="height" multiplier="1:1" id="DhF-NS-tQ8"/>
                                                </constraints>
                                            </imageView>
...
                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <subviews>
                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1Mf-cQ-Ymf">
                                                            <rect key="frame" x="-95" y="-39" width="240" height="128"/>
                                                            <color key="backgroundColor" white="0.80568372479999995" alpha="1" colorSpace="calibratedWhite"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="Album Image Preview">
                                                                <bool key="isElement" value="YES"/>
                                                            </accessibility>
                                                        </imageView>
                                                    </subviews>
                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                </view>
...
                                            <constraints>
                                                <constraint firstAttribute="width" secondItem="1yU-Ed-2C1" secondAttribute="height" multiplier="1:1" id="d7B-Ps-3e8"/>
                                            </constraints>
                                        </imageView>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X1N-YH-TN8">
                                            <rect key="frame" x="124" y="31" width="441" height="21"/>
                                            <accessibility key="accessibilityConfiguration" identifier="Album name">
                                                <accessibilityTraits key="traits" button="YES" staticText="YES"/>
                                            </accessibility>
                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                            <nil key="highlightedColor"/>
                                        </label>
...
