"imageLabelText" = "image";
"severalImagesLabelText" = "images";
"generalCollectionName" = "Cameraroll";
"userDefinedAlbumsCollectionName" = "Albums";
"smartAlbumsCollectionName" = "Smart Albums";
"allPhotosAlbumName" = "All Photos";
"favoritesAlbumName" = "Favorites";
"selectButtonLabelText" = "Select";