...
            let bottom = NSLayoutConstraint(item: vc.view, attribute: NSLayoutAttribute.bottom, relatedBy: NSLayoutRelation.equal, toItem: containerView, attribute: NSLayoutAttribute.bottom, multiplier: 1, constant: 0)
            let centerX = NSLayoutConstraint(item: vc.view, attribute: NSLayoutAttribute.centerX, relatedBy: NSLayoutRelation.equal, toItem: containerView, attribute: NSLayoutAttribute.centerX, multiplier: 1, constant: 0)
            
            containerView?.addConstraints([width, centerX, height, bottom])
        }
        let backButton = UIBarButtonItem()
        backButton.title = "Back"
        backButton.target = self
        backButton.action = #selector(backButtonPressed)
        navigationItem.leftBarButtonItem = backButton
        
        let selectButton = UIBarButtonItem()
        selectButton.title = "NESTE"
        if let font = SnapFonts.gothamRoundedMedium(ofSize: SnapImagePickerTheme.fontSize - 5) {
            let attributes: [String: AnyObject] = [
                NSFontAttributeName: font,
                NSForegroundColorAttributeName: SnapImagePickerTheme.color
            ]
            
...
