...
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="16c-bc-axl" secondAttribute="height" multiplier="1:1" id="ZYa-Z7-0Nr"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uj3-HN-l9z">
                                <rect key="frame" x="237" y="380" width="126" height="30"/>
                                <state key="normal" title="Start image picker"/>
                                <connections>
                                    <action selector="openImagePicker:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hvT-nX-YSg"/>
                                </connections>
                            </button>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9N9-XU-MV2">
                                <rect key="frame" x="237" y="418" width="51" height="31"/>
...
